# picoprojects

./: .gitignore  README.md  makepico
baremetalc/: CMakeLists.txt  baremetalc.c
board/: CMakeLists.txt  README.md  board.c
include/: baremetalc.h
